--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.DiceApp"
         tools:targetApi="31">
         <activity
-            android:name=".Login"
+            android:name=".views.activities.Career"
+            android:exported="false" />
+        <activity
+            android:name=".views.activities.Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Home"
+            android:name=".views.activities.Home"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
